@@ -1,27 +1,31 @@
   ***   Warning: new stack size = 20000000 (19.073 Mbytes).
 []
 [[0, -1]]
-[[-4, 3], [4, 3], [-4, -3], [4, -3]]
+[[-4, -3], [-4, 3], [4, -3], [4, 3]]
 [[1, 1]]
-[[1, 0], [-1, 0], [0, 1], [1, 1], [-1, -1], [0, -1]]
-[[1868, 514], [-4, -2]]
+[[-1, -1], [-1, 0], [0, -1], [0, 1], [1, 0], [1, 1]]
+[[-4, -2], [1868, 514]]
 []
 [[5, 1]]
-[[1, 1], [-1, -1]]
-[[1, 1], [-1, -1]]
+[[-1, -1], [1, 1]]
+[[-1, -1], [1, 1]]
   ***   at top-level: thueinit(x^0)
   ***                 ^-------------
   *** thueinit: constant polynomial in thueinit.
-[[2, 2], [-2, -2], [4, 1], [-4, -1]]
+[[-4, -1], [-2, -2], [2, 2], [4, 1]]
 [[0, 3], [3, -276], [3, 0]]
 [[0, 3], [3, 0], [19, 2], [27, 3]]
-[[-1, 1], [1, 1], [-1, -1], [1, -1]]
+[[-1, -1], [-1, 1], [1, -1], [1, 1]]
 []
 [[0, 0]]
 [[0, 0]]
-[[-1, -1], [1, -1], [-1, 1], [1, 1]]
+[[-1, -1], [-1, 1], [1, -1], [1, 1]]
 []
-[[0, 1], [1, -537825], [1, 1], [537824, 1], [1, 0]]
+[[0, 1], [1, -537825], [1, 0], [1, 1], [537824, 1]]
 [[44, -131]]
-[[4181, 6765], [10946, 17711], [-17711, -28657], [2584, 4181]]
-Total time spent: 2276
+[[-17711, -28657], [2584, 4181], [4181, 6765], [10946, 17711]]
+[]
+[[0, -1], [0, 1]]
+[[0, 1]]
+[[-8, 6], [-2, -2], [-2, 0], [0, -2], [2, -2]]
+Total time spent: 2252
