@@ -27,4 +27,7 @@ thue(x^3-12*x-13,87)
 thue(x^3-537825*x^2+537824*x+1, 1)
 thue(thueinit(x^3-x-1),1578191)
 thue((10946*x-6765)*(x^2+x-1), 1)
-
+thue((x^3-2)^2,-4)
+thue((x^3-2)^2,4)
+thue((x^3-2)^3,-8)
+thue((x^3-x+1)^3,-512)
